assets/css/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&family=Schibsted+Grotesk:ital,wght@0,400;0,700;1,400&display=swap');

/* Asterisk wildcard selector to override default styles added by browser - copied from the Code Institute's Love Running project*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles - based on the Code Institute's Love Running project */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    font-family: 'Schibsted Grotesk', sans-serif;
    color: #101C24;
}

/* Header */
header {
    background-color: #6CB9F0;
    padding: 0.5rem 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 5px 5px #4A1861;
}

header a {
    text-decoration: none;
    color: inherit;
    display: flex;
    justify-content: space-between;
    align-item: baseline;
}

h1 {
    font-family: 'Libre Franklin', sans-serif;
    text-transform: uppercase;
    color: #4A1861;
    font-size: 130%;
}

#menu {
    list-style-type: none;
    font-size: 110%;
    margin-top: 1em;
}

#menu > li {
    margin-bottom: 0.5em;
}

.active {
    font-weight: bold;
}

/* Nav bar stylesfrom Love Running */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 5px 5px #4A1861;
    display: none;
    top: 100%;
}

/* Nav toggle from Love Running */
#nav-toggle:checked ~ nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}


/* Hiding class, making content visible to screen-readers but not visually 
.sr-only:not(:focus):not(:active) {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}
*/


/* Main content */
main {
    background-color: #FFFFFF;
    flex: 1 0 auto;
}

/* Footer */
footer {
    background-color: #6CB9F0;
    width: 100%;
    /* Make the footer stick to the bottom of the page and be always visible */
    position: fixed;
    bottom: 0;
}

